function adjust, bug fixed

--- a/qlcp21a/default.ini
+++ b/qlcp21a/default.ini
@@ -20,7 +20,6 @@ filename_flat_lst      = "flat_{band}.lst"
 filename_file_lst      = "{obj}_{band}.lst"
 filename_bias_fit      = "bias.fits"
 filename_flat_fit      = "flat_{band}.fits"
-filename_imgproc_log   = "imgproc_{obj}_{band}.log"
 filename_wcs_txt       = "wcs_{obj}_{band}.fits"
 filename_offset_txt    = "offset_{obj}_{band}.txt"
 filename_pick_txt      = "pick_{obj}_{band}.txt"
@@ -33,6 +32,7 @@ filename_cali_txt      = "cali_{obj}_{band}.txt"
 filename_lc_png        = "lc_{obj}_{band}.png"
 filename_bias_log      = "log/bias.log"
 filename_flat_log      = "log/flat_{band}.log"
+filename_imgproc_log   = "log/imgproc_{obj}_{band}.log"
 filename_phot_log      = "log/phot_{obj}_{band}.log"
 filename_wcs_log       = "log/wcs_{obj}_{band}.log"
 filename_offset_log    = "log/offset_{obj}_{band}.log"
@@ -78,14 +78,17 @@ offset_factor    = 2.0   #第二次迭代的容错值，为上一次匹配偏移
 pick_err     = 0.1    # 第一轮选择，误差上限
 pick_star    = 100    # 第一轮最多不超过多少颗
 pick_var_std = 0.1    # 最终选定时目标变星，在全部图像中的定标后标准差下限
-pick_var_dif = 0.25   # 目标变星亮度最大、最小值之差下限
-pick_ref_std = 0.025  # 最终选定的参考星，在全部图像中的定标后标准差上限
+pick_var_dif = 0.2    # 目标变星亮度最大、最小值之差下限
+pick_var_rad = 0.2    # 目标星距离图像中心范围限制
+pick_ref_std = 0.02   # 最终选定的参考星，在全部图像中的定标后标准差上限
 pick_ref_dif = 0.1    # 参考星亮度最大、最小值之差上限
 pick_ref_n   = 20     # 最多找几颗参考星
 
 site_lon = 117.57722  # 117.34.38      #观测站的经度
 site_lat = 40.395833  # +40.23.45      #观测站的纬度
-site_ele = 900                         #观测站的高度
+site_ele = 960                         #观测站的高度
+hdr_obj_ra  = "RA"    # key of RA in header
+hdr_obj_dec = "DEC"   # key of Dec in header
 
 choose_err_limit = 0.01       #判断图中哪些星是不变的星的候选体的选择标准
 choose_max_count = 20     #候选体的个数
